Anime/kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anime-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: anime
  template:
    metadata:
      labels:
        app: anime
    spec:
      containers:
        - name: anime
          image: hariprasad0023/spe_backend:latest
          ports:
            - containerPort: 9292
