Anime/kubernetes/backend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: anime-service
spec:
  selector:
    app: anime
  ports:
    - protocol: TCP
      port: 9292
      targetPort: 9292

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anime-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: anime
  template:
    metadata:
      labels:
        app: anime
    spec:
      containers:
        - name: anime
          image: hariprasad0023/spe_backend:latest
          ports:
            - containerPort: 9292
        - name: filebeat
          image: docker.elastic.co/beats/filebeat:8.0.0
          args: [
            "-e",
            "-E", "filebeat.config.modules.enabled=false",
            "-E", "output.elasticsearch.hosts=[\"https://81d9dc1bd63d45f497a94a307677e119.us-central1.gcp.cloud.es.io:443\"]",
            "-E", "output.elasticsearch.username=elastic",
            "-E", "output.elasticsearch.password=sRlHJmrEOwXse5zexTPKA8yu",
            "-E", "output.elasticsearch.ssl.enabled=true",
            "-E", "output.elasticsearch.ssl.verification_mode=none",
            "-E", "filebeat.inputs=type=log",
            "-E", "filebeat.paths=/app/logs/app.log",
            "-E", "filebeat.processors=[{ script: { source: 'event.Put(\"index\", \"index\")' } }]",
          ]
          volumeMounts:
            - name: log-volume
              mountPath: /app/logs/app.log
              readOnly: true
      volumes:
        - name: log-volume
          emptyDir: {}
