Anime/kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: anime-service
spec:
  selector:
    app: anime
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9292
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anime-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: anime
  template:
    metadata:
      labels:
        app: anime
    spec:
      containers:
        - name: anime
          image: hariprasad0023/spe_backend:latest
          ports:
            - containerPort: 9292
      volumes:
        - name: mysql-persistent-storage
          emptyDir: {}
